# efcom_sh400_bl5340

./: .clang-format  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  README.md  west.yml
app/: CMakeLists.txt  debug.conf  prj.conf  sample.yaml
app/src/: main.c
boards/efcom/sh400_bl5340/: Kconfig.defconfig  Kconfig.sh400_bl5340  board.cmake  board.yml  sh400_bl5340-cpuapp_partitioning.dtsi  sh400_bl5340-pinctrl.dtsi  sh400_bl5340_nrf5340_cpuapp.dts  sh400_bl5340_nrf5340_cpuapp.yaml  sh400_bl5340_nrf5340_cpuapp.yml  sh400_bl5340_nrf5340_cpuapp_common-pinctrl.dtsi  sh400_bl5340_nrf5340_cpuapp_common.dtsi  sh400_bl5340_nrf5340_cpuapp_defconfig  sh400_bl5340_nrf5340_cpuapp_ns.dts  sh400_bl5340_nrf5340_cpuapp_ns.yaml  sh400_bl5340_nrf5340_cpuapp_ns_defconfig  sh400_bl5340_nrf5340_cpuapp_partition_conf.dtsi  sh400_bl5340_nrf5340_cpunet-pinctrl.dtsi  sh400_bl5340_nrf5340_cpunet.dts  sh400_bl5340_nrf5340_cpunet.yaml  sh400_bl5340_nrf5340_cpunet_common.dtsi  sh400_bl5340_nrf5340_cpunet_defconfig
doc/: Doxyfile  conf.py
drivers/sensor/example_sensor/: example_sensor.c
dts/bindings/: vendor-prefixes.txt
dts/bindings/audio/: richtek,rt9123.yaml
images/: zephyr.hex  zephyr_debug_rtt.hex  zephyr_debug_uart.hex
include/: dt_interfaces.h
lib/: CMakeLists.txt  Kconfig
lib/adc/: CMakeLists.txt  Kconfig  analog_wrapper.c  analog_wrapper.h
lib/ble/: CMakeLists.txt  Kconfig  ble.c  ble.h
lib/gpio/: CMakeLists.txt  Kconfig  gpio_wrapper.c  gpio_wrapper.h
lib/i2c/: CMakeLists.txt  Kconfig  i2c_wrapper.c  i2c_wrapper.h
lib/pwm/: CMakeLists.txt  Kconfig  pwm_wrapper.c  pwm_wrapper.h
lib/sdcard/: CMakeLists.txt  Kconfig  sdcard.c  sdcard.h
lib/uart/: CMakeLists.txt  Kconfig  uart_wrapper.c  uart_wrapper.h
overlays/: segger-rtt.conf
samples/battery/: CMakeLists.txt  prj.conf
samples/ble/: CMakeLists.txt  prj.conf  sample.yaml
samples/ble_peripheral_uart/: CMakeLists.txt  README.rst  prj.conf
samples/flash/: CMakeLists.txt  README.rst
samples/gpio/: CMakeLists.txt  prj.conf
samples/i2c/: prj.conf
samples/i2s_output/: CMakeLists.txt  README.md  prj.conf
samples/i2s_output/include/: test_wave.h
samples/i2s_output/src/: main.c
samples/nus/: prj.conf
samples/pwm/: CMakeLists.txt  prj.conf
samples/pwm/src/: main.c
samples/sdcard/: CMakeLists.txt  README.md  prj.conf
samples/sdcard/src/: main.c
samples/sdcard_i2s_output/: CMakeLists.txt  README.md
samples/soc_flash_nrf/: CMakeLists.txt
samples/spi/: CMakeLists.txt  Kconfig
samples/uart/: CMakeLists.txt  prj.conf
(+11 files in other folders)
